--- a/Report/Referances.bib
+++ b/Report/Referances.bib
@@ -42,7 +42,7 @@
 	howpublished = {\url{https://arxiv.org/abs/2004.13637}}	
 }
 
-@misc{Google Assistant,
+@misc{GoogleAssistant,
 	author = {Google},
 	title = {Google Assistant},
 	year = {2016},
@@ -62,15 +62,15 @@
 }
  
 @misc{selenium, 
-	url={https://www.selenium.dev/selenium/docs/api/javascript/index.html}, journal={Index}
+	url={https://www.selenium.dev/selenium/docs/api/javascript/index.html}, journal={Index}, year={2022}
 }  
 
 @misc{trainline,
-	title={Search, Compare and Buy Cheap Train Tickets}, url={https://www.thetrainline.com/}, journal={Trainline}
+	title={Search, Compare and Buy Cheap Train Tickets}, url={https://www.thetrainline.com/}, journal={Trainline}, year={2022}
 } 
 
 @misc{Spacydoc, 
-	title={Doc · spacy API documentation}, url={https://spacy.io/api/doc}, journal={Doc}
+	title={spacy API documentation}, url={https://spacy.io/api/doc}, journal={Doc}, year={2022}
 } 
 
    
