final report with changes

--- a/Report/CW2_UG14.tex
+++ b/Report/CW2_UG14.tex
@@ -500,7 +500,7 @@ For the delay prediction we used a K-Nearest-Neighbour (KNN) method and a neural
 	
 	\begin{figure}[!htb]
 		\begin{center}
-			\includegraphics{Resources/Screenshot 2022-01-28 at 15.23.51.png}
+			\includegraphics[width=1\linewidth]{Resources/Screenshot 2022-01-28 at 15.23.51.png}
 			\caption{Demo of question tailoring}
 			\label{Img:Userbility}
 		\end{center}
